--- a/packages/babel-preset-inferno-node-app/package.json
+++ b/packages/babel-preset-inferno-node-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-inferno-node-app",
-  "version": "1.0.0",
+  "version": "1.0.1-1.0.0-0.0",
   "license": "MIT",
   "directories": {
     "lib": "lib"
