--- a/packages/eslint-config-hulkish-inferno-app/package.json
+++ b/packages/eslint-config-hulkish-inferno-app/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "lib/index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hulkish/web-app-tools.git"
+  },
   "directories": {
     "lib": "lib"
   },
