--- a/packages/babel-preset-inferno-node-app/package.json
+++ b/packages/babel-preset-inferno-node-app/package.json
@@ -2,6 +2,10 @@
   "name": "babel-preset-inferno-node-app",
   "version": "1.0.1-1.0.0-0.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hulkish/web-app-tools.git"
+  },
   "directories": {
     "lib": "lib"
   },
