--- a/packages/eslint-config-hulkish-inferno-app/package.json
+++ b/packages/eslint-config-hulkish-inferno-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-hulkish-inferno-app",
-  "version": "1.0.0",
+  "version": "1.0.1-1.0.0-0.0",
   "main": "lib/index.js",
   "license": "MIT",
   "repository": {
