wip: setting up (#1)
* added repo field

* Publish

 - babel-preset-inferno-node-app@1.0.1-1.0.0-0.0
 - eslint-config-hulkish-inferno-app@1.0.1-1.0.0-0.0

* Publish

 - babel-preset-inferno-node-app@1.0.1-1.0.0-0.1
 - eslint-config-hulkish-inferno-app@1.0.1-1.0.0-0.1

--- a/packages/babel-preset-inferno-node-app/package.json
+++ b/packages/babel-preset-inferno-node-app/package.json
@@ -1,7 +1,11 @@
 {
   "name": "babel-preset-inferno-node-app",
-  "version": "1.0.1-1.0.0-0.0",
+  "version": "1.0.1-1.0.0-0.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hulkish/web-app-tools.git"
+  },
   "directories": {
     "lib": "lib"
   },
