--- a/packages/eslint-config-hulkish-inferno-app/package.json
+++ b/packages/eslint-config-hulkish-inferno-app/package.json
@@ -1,8 +1,12 @@
 {
   "name": "eslint-config-hulkish-inferno-app",
-  "version": "1.0.0",
+  "version": "1.0.1-1.0.0-0.1",
   "main": "lib/index.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hulkish/web-app-tools.git"
+  },
   "directories": {
     "lib": "lib"
   },
