wip: initial setup

--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "devDependencies": {
     "ava": "^0.19.1",
     "babel-cli": "next",
+    "babel-eslint": "^7.2.3",
     "babel-preset-env": "next",
     "cross-env": "^4.0.0",
     "eslint": "^3.19.0",
-    "eslint-config-hulkish-inferno-app": "^1.0.1-1.0.0-0.1",
+    "eslint-config-babel": "^6.0.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
     "husky": "^0.13.3",
     "lerna": "^2.0.0-rc.4",
     "lint-staged": "^3.4.1",
