--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,16 @@
 {
-  "extends": "hulkish-inferno-app"
+  "extends": "babel",
+  "plugins": [
+    "import"
+  ],
+  "env": {
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 7,
+    "sourceType": "module"
+  },
+  "rules": {
+    "quotes": ["error", "single"]
+  }
 }
