--- a/packages/eslint-config-hulkish-inferno-app/package.json
+++ b/packages/eslint-config-hulkish-inferno-app/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0"
   },
   "scripts": {
+    "prepublish": "npm run -s build:prod",
     "clean": "rimraf lib",
     "build": "run-s clean build:babel",
     "build:prod": "cross-env NODE_ENV=production npm run -s build",
